--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+div {
+	margin: 0 auto;
+	text-align: center;
+}
+
+
 #tetris {
-	width: 100%;
-	height: 100%;
+	border: 5px solid grey;
+	padding: 1px;
+	border-radius: 30px;
 }
