--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
 div {
-	margin: 10px 10px;
+	margin: 10px 10px;	
 }
-
 
 #tetris {
 	border: 5px solid grey;
 	padding: 1px;
 	border-radius: 30px;
-}
+	text-align: center;
+	position: absolute;
+	left: 100px;
+} 
 
-.time {
+.time, .score{
 	font-size: 80px;
 	font-family: 'Lobster',sans-serif;
 	margin: 0 auto;
 }
 
-.score {
+.start {
 	font-size: 80px;
 	font-family: 'Lobster',sans-serif;
-	margin: 0 auto;
+	margin: 5px auto;
+	width: 350px;
+}
+
+.jumbotron{
+	font-size: 80px;
+	font-family: 'Lobster',sans-serif;
+	text-align: center;
+	margin: 40px 32px;
 }
