--- a/style.css
+++ b/style.css
@@ -2,31 +2,54 @@ div {
 	margin: 10px 10px;	
 }
 
-#tetris {
-	border: 5px solid grey;
-	padding: 1px;
-	border-radius: 30px;
+.head {
 	text-align: center;
-	position: absolute;
-	left: 100px;
+	margin: 0px auto;
+}
+
+.head > div {
+	display: inline-block;
+}
+
+.headings {
+	font-size: 70px;
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	float: left;
+}
+
+#tetris {
+	border-radius: 10px;
+	border: 0.5em solid white;
 } 
 
-.time, .score{
-	font-size: 80px;
-	font-family: 'Lobster',sans-serif;
+.tetrisCan {
+	text-align: center;
 	margin: 0 auto;
 }
 
-.start {
-	font-size: 80px;
-	font-family: 'Lobster',sans-serif;
-	margin: 5px auto;
-	width: 350px;
+.score, .time{
+	font-size: 30px;
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	text-align: center;
+	margin: 0 auto;
 }
 
-.jumbotron{
-	font-size: 80px;
-	font-family: 'Lobster',sans-serif;
-	text-align: center;
-	margin: 40px 32px;
+body {
+	background-image: url("images/background.png");
+	background-repeat: repeat;
+}
+
+@media screen and (max-width : 400px) {
+	#tetris {
+		width: 50vw;
+	}
+}
+
+@media screen and (min-width : 350px) {
+/* Styles */
+	#tetris {
+		height: 70vh;
+	}
 }
